--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,11 +5,44 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}La Friperie{% endblock %}</title>
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/css/uikit.min.css" />
         <link rel="stylesheet" href="{{ asset('build/global.css') }}">
     </head>
     <body>
 
-        {% block body %}{% endblock %}
+        {% block navbar %}
+            <nav class="uk-navbar-container uk-margin" uk-navbar uk-sticky="show-on-up: true; animation: uk-animation-slide-top; bottom: #bottom; media: 640;">
+                <div class="uk-navbar-left">
+                    <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #offcanvas-push">Menu</button>
+                    <a class="uk-navbar-item uk-logo" href="{{ path('showAll') }}">LA FRIPERIE</a>
+                </div>
+                <div class="uk-navbar-right">
+                    <div>
+                        <a class="uk-navbar-toggle" uk-search-icon href="#"></a>
+                        <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 0">
+                            <form class="uk-search uk-search-navbar uk-width-1-1">
+                                <input class="uk-search-input" type="search" placeholder="Search..." autofocus>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        {% endblock %}
+
+        {% block sidebar %}
+            <div class="uk-offcanvas-content">
+                {% block content %}{% endblock %}
+                {{ render(controller('ArticleBundle:Article:addFilterToSidebar')) }}
+            </div>
+        {% endblock %}
+
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit-icons.min.js"></script>
+        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
         <script src="{{ asset('build/app.js') }}"></script>
+        <script src="{{ asset('build/article.js') }}"></script>
     </body>
 </html>
