--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -2,3 +2,23 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $fa-font-path: "~font-awesome/fonts";
 
 @import '~bootstrap/scss/bootstrap';
+
+.card-columns {
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+  @include media-breakpoint-only(md) {
+    column-count: 3;
+  }
+  @include media-breakpoint-only(sm) {
+    column-count: 2;
+  }
+  @include media-breakpoint-only(xs) {
+    column-count: 1;
+  }
+}
+
+.unavailable {
+  font-size: 1.5em;
+  font-weight: bold;
+}
