user profile's template workinprogress

--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -1,7 +1,27 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-
+    <div class="uk-container uk-container-small">
+        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+            <div class="uk-card-media-left uk-cover-container">
+                <img src="https://images.vinted.net/thumbs/f800/01b4a_q78drngp5RMiTM9Tdsvq4RgY.jpeg?11511529179" alt="" uk-cover>
+                <canvas width="600" height="400"></canvas>
+            </div>
+            <div>
+                <div class="uk-card-header">
+                    <h3 class="uk-card-title uk-text-right">{{ app.user.username }}</h3>
+                </div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title uk-text-muted">Informations personnelles</h3>
+                    <ul class="uk-list">
+                        <li>Email : {{ app.user.email }}</li>
+                        <li>Articles vendus : 0</li>
+                        <li>Articles achetés : 0</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 
