display and edit user profile template and form

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
                         <div class="uk-navbar-dropdown">
                             <ul class="uk-nav uk-navbar-dropdown-nav">
                                 <li><a href="{{ path('fos_user_profile_show') }}">Mon profil</a></li>
-                                <li><a href="#">Mes paramètres</a></li>
+                                <li><a href="{{ path('fos_user_profile_edit') }}">Mes paramètres</a></li>
                                 <li><a href="#">Mes articles</a></li>
                                 <li><a href="{{ path('fos_user_security_logout') }}">Se déconnecter</a></li>
                             </ul>
