--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -2,18 +2,24 @@
 
 {% block content %}
     <div class="uk-container uk-container-small">
-        <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
+        <h1 class="uk-heading-divider uk-text-muted">Mes paramètres</h1>
+        <div class="uk-card uk-card-default uk-card-small uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://images.vinted.net/thumbs/f800/01b4a_q78drngp5RMiTM9Tdsvq4RgY.jpeg?11511529179" alt="" uk-cover>
-                <canvas width="600" height="400"></canvas>
+                {% if user.imageName is empty %}
+                    <img src="{{ asset('uploads/images/users/default/default.jpeg') }}" alt="{{ 'default_image' }}" width="287" height="287">
+                {% else %}
+                <img src="{{ vich_uploader_asset(user, 'imageFile') | imagine_filter('user_thumb') }}" alt="{{ user.imageName }}">
+                {% endif %}
             </div>
             <div>
                 <div class="uk-card-header">
-                    <h3 class="uk-card-title uk-text-right">{{ app.user.username }}</h3>
+                    <h3 class="uk-card-title uk-text-left uk-text-bold">{{ app.user.username | capitalize}}</h3>
                 </div>
                 <div class="uk-card-body">
                     <h3 class="uk-card-title uk-text-muted">Informations personnelles</h3>
                     <ul class="uk-list">
+                        <li>Nom : {{ app.user.lastname | capitalize }}</li>
+                        <li>Prénom : {{ app.user.firstname | capitalize }}</li>
                         <li>Email : {{ app.user.email }}</li>
                         <li>Articles vendus : 0</li>
                         <li>Articles achetés : 0</li>
@@ -23,7 +29,5 @@
         </div>
     </div>
 {% endblock %}
-
-
 
 
