--- a/app/Resources/views/article/showAll.html.twig
+++ b/app/Resources/views/article/showAll.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <div class="uk-container uk-container-large">
+    <div class="uk-container uk-container-small">
         <div class="uk-child-width-expand@s uk-text-center" uk-grid>
         {% for article in articles %}
 
-                <div class="uk-width-1-6@xl uk-width-1-5@l uk-width-1-4@m uk-width-1-3@s">
+                <div class="uk-width-1-5@xl uk-width-1-5@l uk-width-1-5@m uk-width-1-4@s">
                     <div class="uk-card uk-card-default uk-card-hover">
                         <div class="uk-card-media-top">
                             <a href="{{ path('showOne', {'id': article.id}) }}">
