change from hover to click mode to display user's options

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,8 +45,7 @@
                             {% endif %}
                             <span uk-icon="icon: triangle-down; ratio: 1"></span>
                         </a>
-                        {#<a href="#">{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}</a>#}
-                        <div class="uk-navbar-dropdown">
+                        <div uk-dropdown="mode: click">
                             <ul class="uk-nav uk-navbar-dropdown-nav">
                                 <li><a href="{{ path('fos_user_profile_show') }}">Mon profil</a></li>
                                 <li><a href="{{ path('fos_user_profile_edit') }}">Mes paramètres</a></li>
