--- a/app/Resources/views/article/showOne.html.twig
+++ b/app/Resources/views/article/showOne.html.twig
@@ -3,13 +3,19 @@
 {% block content %}
 
     <div class="container">
-            <p>{{ article.name }}</p>
-            <p>{{ article.category }}</p>
-            <p>{{ article.brand }}</p>
-            <p>{{ article.model }}</p>
-            <p>{{ article.description }}</p>
-            <p>{{ article.price }}</p>
-            <p><img src="{{ vich_uploader_asset(article.images[0], 'imageFile') | imagine_filter('article_thumb') }}" alt="{{ article.name }}" /></p>
+        <div class="uk-flex-top" uk-grid>
+            <div class="uk-width-2-3@m">
+                <p><span class="uk-text-bold">Produit : </span>{{ article.name }}</p>
+                <p><span class="uk-text-bold">Categorie : </span>{{ article.category }}</p>
+                <p><span class="uk-text-bold">Marque : </span>{{ article.brand }}</p>
+                <p><span class="uk-text-bold">Modèle : </span>{{ article.model }}</p>
+                <p><span class="uk-text-bold">Description : </span>{{ article.description }}</p>
+                <p><span class="uk-text-bold">Prix : </span>{{ article.price ~ ' EUR'}}</p>
+            </div>
+            <div class="uk-width-1-3@m uk-flex-first">
+                <img src="{{ vich_uploader_asset(article.images[0], 'imageFile') | imagine_filter('article_thumb') }}" alt="{{ article.name }}" />
+            </div>
+        </div>
     </div>
 
 {% endblock %}
